--- a/www/templates/browse.html
+++ b/www/templates/browse.html
@@ -1,8 +1,44 @@
 <ion-view title="Browse">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
-  <ion-content class="has-header">
-    <h1>Browse</h1>
-  </ion-content>
+	<ion-nav-buttons side="left">
+		<button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+	</ion-nav-buttons>
+	<ion-content class="has-header">
+		<h1>My Info</h1>
+		<div class="list">
+			<label class="item item-input item-floating-label"> <span class="input-label">First Name</span>
+				<input type="text" placeholder="First Name">
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Last Name</span>
+				<input type="text" placeholder="Last Name">
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Medical Alergies</span>
+				<input type="text" placeholder="Medical Alergies" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Blood Type</span>
+				<input type="text" placeholder="Blood Type" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Emergency Contact Info</span>
+				<input type="text" placeholder="Blood Type" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Existing Medical Conditions</span>
+				<input type="text" placeholder="Existing Medical Conditions" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Current Medications</span>
+				<input type="text" placeholder="Current Medications" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Consumable Prescribed Medications</span>
+				<input type="text" placeholder="Consumable Prescribed Medications" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Insurance details</span>
+				<input type="text" placeholder="Insurance details" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Insurance card front</span>
+				<input type="text" placeholder="Insurance card front" >
+			</label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Insurance card back</span>
+				<input type="text" placeholder="Insurance card back" >
+			</label>
+		</div>
+
+	</ion-content>
 </ion-view>
