--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,8 +1,10 @@
 <ion-view title="Search">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
-  <ion-content class="has-header">
-    <h1>Search</h1>
-  </ion-content>
+	<ion-nav-buttons side="left">
+		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+	</ion-nav-buttons>
+	<ion-content class="has-header">
+		<h1>Call an Ambulance</h1>
+		<!-- localized to the country the user is in -->
+		<!-- send ambulance company sms|message of your current location/coords -->
+	</ion-content>
 </ion-view>
